# paranoid

./: .gitignore  README.md  assets.py  levels.py  paranoid.py  pyproject.toml  requirements.txt
src/paranoid/: assets.py  levels.py  main.py
